tests/snapshots/run_wpt_conformance__litert_instanceNormalization_float16_4D_tensor_options_bias.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float16 4D tensor options.bias, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: InstanceNormalization { input: 1, options: Some(MLInstanceNormalizationOptions { label: "", scale: None, bias: Some(0), epsilon: 1e-5, layout: "" }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f16[2, 3, 2, 2];
  }

  consts {
    operand_0: f16[3] @bytes([34, 208, 131, 68, 190, 208]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=0, epsilon=0.00001, label="", layout="", scale=null);
  }

  outputs { instanceNormOutput; }
}
