tests/snapshots/run_wpt_conformance__litert_instanceNormalization_float16_4D_tensor_options_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float16 4D tensor options.scale, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: InstanceNormalization { input: 0, options: Some(MLInstanceNormalizationOptions { label: "", scale: Some(1), bias: None, epsilon: 1e-5, layout: "" }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f16[2, 3, 2, 2];
  }

  consts {
    operand_1: f16[3] @bytes([231, 213, 43, 84, 41, 214]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=null, epsilon=0.00001, label="", layout="", scale=1);
  }

  outputs { instanceNormOutput; }
}
