tests/snapshots/run_wpt_conformance__litert_instanceNormalization_float32_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float32 4D tensor all options, litert
 instance_normalization :: instanceNormalization float32 4D tensor all options: index 0: actual=64.17018 expected=70.77738 ulp=866019 tolerance=840
  inputs: instanceNormInput: [-97.949951171875, 41.33772659301758, 35.82481384277344, 29.44037628173828, -59.77853012084961, -6.948329448699951, -73.92131042480469, -74.66901397705078, 54.42462158203125, -38.11185836791992, -68.16508483886719, 47.53074645996094, 66.93562316894531, 37.37651062011719, 73.8739242553711, 76.74034881591797, 56.252689361572266, -99.00035095214844, 5.6758809089660645, -16.574905395507813, -33.11322784423828, 25.68659210205078, 42.949893951416016, -17.380685806274414]; instanceNormBias: [-33.048641204833984, 4.511423587799072, -37.93617248535156] (constant); instanceNormScale: [-94.42772674560548, 66.69620513916016, -98.56572723388672] (constant)
  expected instanceNormOutput: [70.77738, 119.31526, -50.821896, -179.65555, -22.847837, 126.011345, 23.540178, -43.78292, -127.717445, -46.85658 ...] (len=24)
  actual instanceNormOutput: [64.17018, 72.6623, -46.592674, -12.031694, -134.17134, -59.065132, 19.93903, -24.157495, -98.25035, 87.11757 ...] (len=24)
  expected instanceNormOutput full nd:
[70.77738, 119.31526, -50.821896, -179.65555, -22.847837, 126.011345, 23.540178, -43.78292, -127.717445, -46.85658, ...] (len=24, shape=[2, 2, 2, 3])
  actual instanceNormOutput full nd:
[64.17018, 72.6623, -46.592674, -12.031694, -134.17134, -59.065132, 19.93903, -24.157495, -98.25035, 87.11757, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f32[2, 2, 2, 3];
  }

  consts {
    operand_0: f32[3] @bytes([207, 49, 4, 194, 149, 93, 144, 64, 164, 190, 23, 194]);
    operand_2: f32[3] @bytes([255, 218, 188, 194, 117, 100, 133, 66, 167, 33, 197, 194]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=0, epsilon=1e-6, label="", layout="nhwc", scale=2);
  }

  outputs { instanceNormOutput; }
}
