tests/snapshots/run_wpt_conformance__litert_instanceNormalization_float32_4D_tensor_options_epsilon.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float32 4D tensor options.epsilon, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f32[2, 3, 2, 2];
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=null, epsilon=1e-6, label="", layout="", scale=null);
  }

  outputs { instanceNormOutput; }
}
