tests/snapshots/run_wpt_conformance__litert_instanceNormalization_float32_4D_tensor_options_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float32 4D tensor options.scale, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f32[2, 3, 2, 2];
  }

  consts {
    operand_1: f32[3] @bytes([255, 218, 188, 194, 117, 100, 133, 66, 167, 33, 197, 194]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=null, epsilon=0.00001, label="", layout="", scale=1);
  }

  outputs { instanceNormOutput; }
}
