tests/snapshots/run_wpt_conformance__litert_isInfinite_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_infinite.https.any.js isInfinite float16 1D tensor, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: IsInfinite { input: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isInfiniteInput: f16[2];
  }

  nodes {
    [isInfiniteOutput] = isInfinite(isInfiniteInput, label="");
  }

  outputs { isInfiniteOutput; }
}
